internal/testdata/node/ingress-templates/ingress-24/test1.example.com.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    fastly.amazee.io/watch: "false"
    idling.amazee.io/disable-request-verification: "false"
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "false"
    lagoon.sh/branch: wildcardjson
    lagoon.sh/version: v2.7.x
    monitor.stakater.com/enabled: "false"
    monitor.stakater.com/overridePath: /bypass-cache
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    activestandby.lagoon.sh/migrate: "false"
    app.kubernetes.io/instance: wildcard-test1.example.com
    app.kubernetes.io/managed-by: build-deploy-tool
    app.kubernetes.io/name: custom-ingress
    lagoon.sh/autogenerated: "false"
    lagoon.sh/buildType: branch
    lagoon.sh/environment: wildcardjson
    lagoon.sh/environmentType: production
    lagoon.sh/project: example-project
    lagoon.sh/service: wildcard-test1.example.com
    lagoon.sh/service-type: custom-ingress
    lagoon.sh/template: custom-ingress-0.1.0
    route.lagoon.sh/source: api
  name: wildcard-test1.example.com
spec:
  rules:
  - host: '*.test1.example.com'
    http:
      paths:
      - backend:
          service:
            name: node
            port:
              name: http
        path: /
        pathType: Prefix
  - host: test1.example.com
    http:
      paths:
      - backend:
          service:
            name: node
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - '*.test1.example.com'
    - test1.example.com
    secretName: wildcard-test1.example.com-tls
status:
  loadBalancer: {}
